stylesheet/index-style.css
/* Importans and Variables */
:root {
    --dark-blue: rgb(4, 14, 37);
    --trans-dark-blue: rgba(4, 14, 37, 0.25);
    --main-blue: rgba(14, 44, 115, 1);
    --accent-blue: rgba(1, 92, 255);
    --main-white: rgb(244, 249, 255);
    --trans-main-white: rgba(244, 249, 255, 0.25);
    --main-font: "Mokoto", "sans-serif";
    --def-font: "Lato", sans-serif;
    --sup-font: "Share Tech Mono", "monospace";
}

@font-face {
    font-family: "Mokoto";
    src: url("../assets/mokoto.regular.ttf") format("truetype");
    src: url("../assets/mokoto-regular.otf") format("opentype");
}



/* Main Body Styling */
* {
    box-sizing: border-box;
}
body {
    margin: 0;
    padding: 0;
    background-color: var(--dark-blue);
    font-family: var(--def-font);
    color: var(--main-white);
    overflow-x: hidden;
}
.loading-cursor {
    cursor: wait;
}



/* Navigation bar style */
.navigation-bar-content {
    position: fixed;
    width: 100vw;
    height: 80px;
    z-index: 10;
    display: grid;
    align-items: center;
    grid-template-columns: 1fr 2fr 1fr;
    font-family: var(--sup-font);
}
.nav-logo-content img{
    max-width: 120px;
    padding-left: 50px;
}
.menu-list {
    display: flex;
    justify-content: space-around;
    list-style: none;
    background-color: var(--trans-dark-blue);
    backdrop-filter: blur(8px);
    padding: 20px;
    border-radius: 25px;
}
.nav-item {
    text-decoration: none;
    font-size: 20px;
    color: var(--main-white);
    padding: 10px;
    transition: all 0.3s ease-in-out;
}
.active, .nav-item:hover {
    color: var(--accent-blue);
    font-size: 23px;
}
.nav-contact-container {
    text-align: right;
    padding-right: 50px;
}
.nav-contact-bt {
    background: radial-gradient(rgba(1, 92, 255, 0.5), rgba(1, 92, 255, 0.8));
    box-shadow: 0px -5px 20px var(--trans-main-white) inset;
    padding: 10px 20px;
    border: 1px solid rgba(1, 92, 255, 1);
    border-radius: 8px;
    color: var(--main-white);
    font-size: 24px;
    font-family: var(--sup-font);
    cursor: pointer;
    text-decoration: none;
}
.nav-contact-bt:hover {
    background: radial-gradient(rgba(1, 92, 255, 0.18), rgba(1, 92, 255, 0.55));
}
/* mobile navigation style */
.mobile-nav-bar-content {
    display: none;
    position: fixed;
    width: 100vw;
    height: 80px;
    z-index: 5;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
    background-color: var(--trans-dark-blue);
    backdrop-filter: blur(0px);
}
.mobile-nav-logo {
    display: none;
}
.mobile-nav-logo img {
    max-width: 120px;
    padding-left: 20px;
}
.mobile-burger-toggle {
    display: none;
    flex-direction: column;
    cursor: pointer;
}
.mobile-burger-toggle .bar {
    width: 25px;
    height: 3px;
    background-color: var(--main-white);
    margin: 4px 0;
    transition: 0.4s;
}
.mobile-menu {
    display: none;
    flex-direction: column;
    position: absolute;
    top: 80px;
    left: 0;
    width: 100%;
    background-color: var(--dark-blue);
    backdrop-filter: blur(8px);
    padding: 20px;
}
.mobile-menu.open {
    display: flex;
}
.mobile-menu .menu-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* background-color: var(--dark-blue); */
    list-style: none;
    padding: 0;
}
.mobile-menu .nav-item {
    color: var(--main-white);
    font-size: 20px;
    padding: 10px 0;
    text-decoration: none;
    transition: all 0.3s ease-in-out;
}
.mobile-menu .nav-item:hover {
    color: var(--accent-blue);
}
/* Media Query for Mobile */
@media (max-width: 480px) {
    .navigation-bar-content {
        display: none;
    }
    .mobile-nav-bar-content {
        display: flex;
        backdrop-filter: blur(8px);
        z-index: 10;
    }
    .mobile-burger-toggle {
        display: flex;
    }
    .mobile-nav-logo {
        display: block;
    }
}



/* main body content styling */
.main-body-content {
    height: 100vh;
    width: 100vw;
    padding: 0;
    /* background-color: var(--dark-blue); */
}



/* particles */
#particles-js {
    position: fixed;
    width: 100%;
    height: 100%;
    background-image: url("");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
    z-index: -1;
}



/* landing section styling */
.landing-section {
    height: 100vh;
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    pointer-events: none;
    z-index: 1;
}
.company-title {
    font-size: 10vw;
    font-family: var(--main-font);
    margin: -1vw 0 0 0;
}
.company-tagline {
    font-size: 3vw;
    font-family: var(--sup-font);
    margin: -5vw 0 5vw 0;
}
/* landing media changes */
@media screen and (max-width: 1024px) {
    .company-title {
        font-size: 17vw;
        margin: -1vw 0 0 0;
    }
    .company-tagline {
        font-size: 6vw;
        margin: -8vw 0 5vw 0;
    }
}
@media screen and (max-width: 480px) {
    .company-title {
        font-size: 20vw;
        margin: -1vw 0 0 0;
    }
    .company-tagline {
        font-size: 6vw;
        margin: -8vw 0 5vw 0;
    }
}



/* Our Mission Style */
.our-mission-section {
    height: 100vh;
    width: 100%;
    z-index: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    background-color: var(--dark-blue);
    /* box-shadow: 0px 10px 20px black inset, 0px -10px 20px black inset; */
    box-shadow: 0px 20px 20px var(--dark-blue), 0px -20px 20px var(--dark-blue);
}
.oms-content-container {
    display: flex;
    align-items: center;
}
.oms-text-container {
    margin: 0 0 0 10vw;
    width: 45%;
}
.oms-title {
    font-size: 3vw;
    font-family: var(--sup-font);
    margin: 0 4vw 0 0;
    line-height: 60px;
    /* width: 60%; */
}
.oms-tagline {
    font-size: 1.5vw;
    margin: 0;
    padding: 15px 0;
    /* width: 60%; */
}
.mission-text {
    width: 70%;
    padding: 0 0 5px 0;
}
/* ... */

